# websearch-mcp

./: .gitignore  README.md  install.sh  pyproject.toml
examples/: simple_client.py
src/local_websearch_mcp/: fetch.py  search.py  server.py
