[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-websearch-mcp"
version = "0.1.0"
description = "MCP web search server using direct internet requests"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Local" }]
dependencies = [
  "mcp>=1.2.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.3",
]

[project.scripts]
local-websearch-mcp = "local_websearch_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
